# lich13studio

./: .gitignore  .oxlintrc.json  README.md  biome.jsonc  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json  vitest.renderer.config.ts
.agents/skills/: .gitignore  public-skills.txt
.claude/skills/: .gitignore
.github/workflows/: ci.yml  release-build.yml
docs/: MIGRATION_NOTES.md  architecture-lite.md  delete-list.md  icon-concept.md  migration-notes.md  module-map.md  rename-plan.md  scope-freeze.md
docs/en/guides/: development.md
docs/zh/guides/: development.md
patches/: @ai-sdk__openai-compatible@2.0.37.patch
resources/builtin-agents/cherry-assistant/: agent.json
scripts/: clean-paths.mjs  migrate-local-data.mjs  postprocess-macos-dmg.sh  prepare-tauri-bundled-binary.mjs  run-in-vsdevcmd.mjs  set-app-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/main/: index.ts  ipc.ts
src/main/aiCore/provider/: providerConfig.ts
src/main/apiServer/: app.ts
src/main/apiServer/middleware/: openapi.ts
src/main/apiServer/routes/: chat.ts  (+3 more)
src/main/mcpServers/: assistant.ts  factory.ts
src/main/services/: AppMenuService.ts  AppService.ts  BackupManager.ts  ConfigManager.ts  FileStorage.ts  LocalTransferService.ts  MCPService.ts  NodeTraceService.ts  ProtocolClient.ts  SelectionService.ts  TrayService.ts  WebDav.ts  WindowService.ts  startupBehavior.test.ts  startupBehavior.ts
src/main/utils/: file.ts  init.ts  systemInfo.ts
src/preload/: index.ts
src/renderer/: index.html  selectionAction.html
src/renderer/src/: App.tsx  Router.tsx  entryPoint.tsx  env.d.ts  init.ts  tauri-shim.ts
(+229 files in other folders)
