[package]
name = "lich13studio"
version = "0.1.0"
description = "lich13studio Tauri Lite runtime"
authors = ["lich13studio"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lich13studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rfd = "0.15"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["process", "time"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
xcap = "0.7"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
